.provarCaches/00D410000011HE0EAM/objects/rstkf__apapplicforex__c.object
<CustomObject>
    <description>apapplicforex__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_apapplic__c</fullName>
        <label>Payables Application Transaction</label>
        <referenceTo>rstkf__apapplic__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Apps</relationshipLabel>
        <relationshipName>apapplicforexs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_appayd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Detail</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Apps</relationshipLabel>
        <relationshipName>apapplicforexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_applieditemexchrate__c</fullName>
        <label>Applied Item Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_appliedspotexchrate__c</fullName>
        <label>Applied Spot Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_crapinvtxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Credit</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Apps</relationshipLabel>
        <relationshipName>Foreign_Exchange_Gain_Loss_on_Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_exchratevaramt__c</fullName>
        <label>Exchange Rate Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Apps</relationshipLabel>
        <relationshipName>apapplicforexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange GL Txn</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Apps</relationshipLabel>
        <relationshipName>apapplicforexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_maintamtapplied__c</fullName>
        <label>Vendor Credit Applied Amt (Mnt currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_maintamtpayable__c</fullName>
        <label>Payment Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_payableitemexchrate__c</fullName>
        <label>Applied Payments Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_payablespotexchrate__c</fullName>
        <label>Applied Payment Spot Exchange Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplicforex_seq__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apapplicforex_apapplic__r.Name + &apos;(&apos; +  TEXT( rstkf__apapplicforex_seq__c ) + &apos;)&apos;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Foreign Exchange Gain/Loss on App</label>
    <listViews>
        <fullName>rstkf__RS_Foreign_Exchange_Gain_Loss_on_Apps</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apapplicforex_apapplic__c</columns>
        <columns>rstkf__apapplicforex_maintamtpayable__c</columns>
        <columns>rstkf__apapplicforex_crapinvtxn__c</columns>
        <columns>rstkf__apapplicforex_maintamtapplied__c</columns>
        <columns>rstkf__apapplicforex_appayd__c</columns>
        <columns>rstkf__apapplicforex_applieditemexchrate__c</columns>
        <columns>rstkf__apapplicforex_payableitemexchrate__c</columns>
        <columns>rstkf__apapplicforex_payablespotexchrate__c</columns>
        <columns>rstkf__apapplicforex_appliedspotexchrate__c</columns>
        <columns>rstkf__apapplicforex_exchratevaramt__c</columns>
        <columns>rstkf__apapplicforex_glacct__c</columns>
        <columns>rstkf__apapplicforex_gltxn__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Foreign Exchange Gain/Loss on Apps</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foreign Exchange Gain/Loss on Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>